--- a/mane.cabal
+++ b/mane.cabal
@@ -6,24 +6,38 @@ description:         VELDT Programmer
 bug-reports:         https://github.com/standardsemiconductor/mane/issues
 license:             MIT
 license-file:        LICENSE
-author:              dopamane
-maintainer:          dwc1295@gmail.com
-copyright:           (c) 2020 Standard Semiconductor
-category:            System
+author:              David Cox
+maintainer:          David Cox <standardsemiconductor@gmail.com>
+copyright:           (c) 2020 David Cox
+category:            System, Hardware
 build-type:          Simple
 extra-source-files:  CHANGELOG.md, README.md
 
 source-repository head
                   type:     git
                   location: https://github.com/standardsemiconductor/mane
+
+library
+  exposed-modules:     Mane
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+  build-depends:       base                 >= 4.12 && < 4.16,
+                       bytestring           >= 0.11 && < 0.12,
+                       ftdi,
+                       usb                  >= 1.3  && < 1.4,
+                       vector               >= 0.12 && < 0.13
+          
+  ghc-options:         -Wall
+  default-extensions:  LambdaCase
                      
 executable mane
   main-is:             Main.hs
+  hs-source-dirs:      app
+  default-language:    Haskell2010
   ghc-options:         -Wall
   build-depends:       base,
-                       bytestring,
-                       vector,
-                       usb,
-                       optparse-applicative,
-                       ftdi
-  default-language:    Haskell2010
+                       mane,
+                       optparse-applicative >= 0.16 && < 0.17,
+                       usb
+  default-extensions:  LambdaCase
+
