--- a/mane.cabal
+++ b/mane.cabal
@@ -23,7 +23,7 @@ library
   default-language:    Haskell2010
   build-depends:       base                 >= 4.12 && < 4.16,
                        bytestring           >= 0.11 && < 0.12,
-                       ftdi,
+                       ftdi                 >= 0.3  && < 0.4,
                        usb                  >= 1.3  && < 1.4,
                        vector               >= 0.12 && < 0.13
           
