--- a/mane.cabal
+++ b/mane.cabal
@@ -24,11 +24,14 @@ library
   build-depends:       base                 >= 4.12 && < 4.16,
                        bytestring           >= 0.11 && < 0.12,
                        ftdi                 >= 0.3  && < 0.4,
+                       mtl                  >= 2.2  && < 2.3,
                        usb                  >= 1.3  && < 1.4,
                        vector               >= 0.12 && < 0.13
           
   ghc-options:         -Wall
-  default-extensions:  LambdaCase
+  default-extensions:  FlexibleContexts
+                       GeneralizedNewtypeDeriving
+                       LambdaCase
                      
 executable mane
   main-is:             Main.hs
