--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -14,16 +14,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        ghc: ['8.8', '8.10', '9.0']
-        cabal: ['3.2', '3.4']
+        ghc: ['9.0']
+        cabal: ['3.10']
         os: [ubuntu-20.04]
     name: ${{ matrix.os }} GHC ${{ matrix.ghc }} Cabal ${{ matrix.cabal }}
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     
     - name: Setup Haskell
-      uses: haskell/actions/setup@v1
+      uses: haskell/actions/setup@v2
       with:
         ghc-version: ${{ matrix.ghc }}
         cabal-version: ${{ matrix.cabal }}
@@ -32,10 +32,6 @@ jobs:
       run: |
         sudo apt update
         sudo apt install libusb-1.0-0-dev
-        cabal update
-        cabal build --only-dependencies
 
-    - name: Build & Test
-      run: |
-        cabal configure
-        cabal build
+    - name: Build
+      run: cabal build
