--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -2,9 +2,9 @@ name: Haskell CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   schedule:
     # run at start of every day UTC
     - cron: '0 0 * * *'
@@ -15,9 +15,8 @@ jobs:
     strategy:
       matrix:
         ghc: ['9.0']
-        cabal: ['3.10']
         os: [ubuntu-20.04]
-    name: ${{ matrix.os }} GHC ${{ matrix.ghc }} Cabal ${{ matrix.cabal }}
+    name: ${{ matrix.os }} GHC ${{ matrix.ghc }}
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -32,7 +31,6 @@ jobs:
       id: setup
       with:
         ghc-version: ${{ matrix.ghc }}
-        cabal-version: ${{ matrix.cabal }}
 
     - name: Install libusb
       run: |
